ARIES-2165: Update parent pom and build proxy on Java 11, 17 and 21 adding objensis